# spatial-tensors

./: .gitignore  .pre-commit-config.yaml  bayesian_results.json  main.py  pyproject.toml  requirements.txt
docs/lit-candidate/: candidate.tex  reference.bib
docs/papers/: paper.tex
docs/papers/aux/: paper.toc
docs/presentation/: presentation.tex
docs/presentationr/: presentation.tex
docs/proporsal/: abstract.tex  proporsal.tex
docs/proporsal/aux/: proporsal.aux  proporsal.fdb_latexmk  proporsal.fls  proporsal.out
notebooks/: b-spline.ipynb  fixed.ipynb  graphs_simulation.ipynb  p-spline.ipynb  scikit-splines.ipynb  scratch.ipynb  scratch.py  scratch2.ipynb  simulation.py  spatial_sim.ipynb  spreg_gen.ipynb  spreg_simulation.ipynb  tensor_products.ipynb  tensor_products.py
src/data/: data_pull.py  data_reg.py
src/sql/: init_dp03_table.sql  models.py
src/st_repl/: __init__.py  data_pull.py  st_repl.py
