[project]
name = "st_repl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Alejandro Ouslan", email = "alejandro.ouslan@upr.edu" }]
requires-python = ">=3.13"
dependencies = ["pandas>=3.0.0", "polars>=1.38.1"]

[project.scripts]
spatial-tensors = "st_repl:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["jupyter>=1.1.1", "polars>=1.38.1", "pre-commit>=4.5.1"]
