[project]
dependencies = [
  "censusforge>=0.5.1",
  "geopandas>=1.1.2",
  "jp-qcew>=3.2.0",
  "jp-tools>=0.5.7",
  "matplotlib>=3.10.8",
  "pandas>=3.0.0",
  "patsy>=1.0.2",
  "polars>=1.38.1",
  "pymc>=5.28.0",
  "pysal>=26.1",
]
name = "st_repl"
version = "1.0.2"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Alejandro Ouslan", email = "alejandro.ouslan@upr.edu" }]
requires-python = ">=3.12"

[project.scripts]
spatial-tensors = "st_repl:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "cairosvg>=2.8.2",
  "jupyter>=1.1.1",
  "jupytext>=1.19.1",
  "kaleido>=1.2.0",
  "pnglatex>=1.1",
  "pre-commit>=4.5.1",
  "pynvim>=0.6.0",
  "pyperclip>=1.11.0",
]
